[gd_scene load_steps=11 format=2]

[ext_resource path="res://Screens/ScreenGallery/dropShadow.png" type="Texture" id=1]
[ext_resource path="res://Shaders/DropShadow.tres" type="Material" id=2]
[ext_resource path="res://Screens/ScreenGallery/GalleryObject.gd" type="Script" id=3]
[ext_resource path="res://Ext/thumb_placeholder.png" type="Texture" id=4]
[ext_resource path="res://stepmania-compat/smSprite.gd" type="Script" id=5]
[ext_resource path="res://Shaders/GreyscaleShader.gdshader" type="Shader" id=6]
[ext_resource path="res://Fonts/NotoSans-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Screens/ScreenGallery/lock_closed.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 7 )

[node name="GalleryObject" type="Control"]
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 180 )
script = ExtResource( 3 )

[node name="DropShadow" type="TextureRect" parent="."]
material = ExtResource( 2 )
margin_left = -10.0
margin_top = -10.0
margin_right = 367.0
margin_bottom = 225.0
texture = ExtResource( 1 )

[node name="GalleryIcon" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 320.0
margin_bottom = 180.0
mouse_default_cursor_shape = 2
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="UnlockedCount" type="Label" parent="."]
margin_left = 256.653
margin_top = 139.011
margin_right = 315.653
margin_bottom = 184.011
custom_fonts/font = SubResource( 2 )
text = "2/2"
align = 2
valign = 2

[node name="Locked" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 320, 180 )
mouse_default_cursor_shape = 8
texture = ExtResource( 8 )
stretch_mode = 4

[connection signal="mouse_entered" from="GalleryIcon" to="." method="_on_GalleryIcon_mouse_entered"]
[connection signal="mouse_exited" from="GalleryIcon" to="." method="_on_GalleryIcon_mouse_exited"]
